clusters/master/quayio-pull-through-cache/quayio-pull-through-cache-us-east-1.yaml
apiVersion: v1
kind: List
items:
- kind: ConfigMap
  apiVersion: v1
  metadata:
    name: quayio-pull-through-cache-us-east-1
    namespace: ci
  data:
    config.yml: |-
      [...]
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: quayio-pull-through-cache-us-east-1
    namespace: ci
  spec:
    to:
      kind: Service
      name: quayio-pull-through-cache-us-east-1
    tls:
      termination: Edge
      insecureEdgeTerminationPolicy: Redirect
- apiVersion: v1
  kind: Service
  metadata:
    name: quayio-pull-through-cache-us-east-1
    namespace: ci
  spec:
    selector:
      app: quayio-pull-through-cache-us-east-1
    ports:
    - port: 5000
      targetPort: 5000
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: quayio-pull-through-cache-us-east-1
    namespace: ci
    labels:
      app: quayio-pull-through-cache-us-east-1
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: quayio-pull-through-cache-us-east-1
    template:
      metadata:
        labels:
          app: quayio-pull-through-cache-us-east-1
      spec:
        tolerations:
        - key: "node-role.kubernetes.io/quayio-cache-worker"
          operator: "Equal"
          value: "quayio-cache-worker"
          effect: "NoSchedule"
        nodeSelector:
          ci-workload: quayio-cache
        containers:
        - command:
          - /tp-entrypoint.sh
          name: quayio-cache
          image: registry.ci.openshift.org/ci/docker-registry:tp-2.8.1
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
          - mountPath: /etc/quay-io-pull-credentials
            name: quay-io-pull-credentials
          - mountPath: /etc/docker-registry
            name: config
        volumes:
        - name: config
          configMap:
            name: quayio-pull-through-cache-us-east-1
        - name: quay-io-pull-credentials
          secret:
            secretName: quay-io-pull-credentials
